jsoup-8-generated-mutants-full/aux.log
/mnt/c/Users/localadmin/repos/jsoup/jsoup_8/generated-mutants-full/999/Node.java:290: error: method parent in class Node cannot be applied to given types;
        child.parent(this);
             ^
  required: no arguments
  found: Node
  reason: actual and formal argument lists differ in length
Note: /mnt/c/Users/localadmin/repos/jsoup/jsoup_8/generated-mutants-full/999/Node.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
